--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script src="jquery.js"></script>
-<script src="index.js"></script>
+<script src="swipe-event.js"></script>
+<script src="swipe-cross.js"></script>
 
 <script>$(function () {
     var target = $('#main');
